--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile 'microutils:kotlin.logging:1.2.1'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-android
     compile group: 'org.slf4j', name: 'slf4j-android', version: '1.7.21'
-
+    compile "com.google.guava:guava:18.0"
     //anko
     compile 'org.jetbrains.anko:anko-sdk15:0.8.2'
 }
